; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/cannonkeys/satisfaction75/extr_satisfaction_encoder.c_handle_encoder_ccw.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/cannonkeys/satisfaction75/extr_satisfaction_encoder.c_handle_encoder_ccw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@encoder_mode = common dso_local global i32 0, align 4
@KC_VOLD = common dso_local global i32 0, align 4
@KC_MEDIA_PREV_TRACK = common dso_local global i32 0, align 4
@KC_WH_U = common dso_local global i32 0, align 4
@kb_backlight_config = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@KC_BRIGHTNESS_DOWN = common dso_local global i32 0, align 4
@queue_for_send = common dso_local global i32 0, align 4
@ENC_CUSTOM_CCW = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @handle_encoder_ccw() #0 {
  %1 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %2 = load i32, i32* @encoder_mode, align 4
  switch i32 %2, label %3 [
    i32 128, label %4
    i32 130, label %6
    i32 129, label %8
    i32 136, label %10
    i32 135, label %23
    i32 134, label %25
  ]

3:                                                ; preds = %0
  br label %4

4:                                                ; preds = %0, %3
  %5 = load i32, i32* @KC_VOLD, align 4
  store i32 %5, i32* %1, align 4
  br label %27

6:                                                ; preds = %0
  %7 = load i32, i32* @KC_MEDIA_PREV_TRACK, align 4
  store i32 %7, i32* %1, align 4
  br label %27

8:                                                ; preds = %0
  %9 = load i32, i32* @KC_WH_U, align 4
  store i32 %9, i32* %1, align 4
  br label %27

10:                                               ; preds = %0
  %11 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @kb_backlight_config, i32 0, i32 1), align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %10
  %14 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @kb_backlight_config, i32 0, i32 1), align 4
  %15 = sub nsw i32 %14, 1
  store i32 %15, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @kb_backlight_config, i32 0, i32 1), align 4
  br label %16

16:                                               ; preds = %13, %10
  %17 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @kb_backlight_config, i32 0, i32 1), align 4
  %18 = call i32 @backlight_set(i32 %17)
  %19 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @kb_backlight_config, i32 0, i32 1), align 4
  %20 = icmp eq i32 %19, 0
  br i1 %20, label %21, label %22

21:                                               ; preds = %16
  store i32 0, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @kb_backlight_config, i32 0, i32 0), align 4
  br label %22

22:                                               ; preds = %21, %16
  br label %27

23:                                               ; preds = %0
  %24 = load i32, i32* @KC_BRIGHTNESS_DOWN, align 4
  store i32 %24, i32* %1, align 4
  br label %27

25:                                               ; preds = %0
  %26 = call i32 @update_time_config(i32 -1)
  store i32 1, i32* @queue_for_send, align 4
  br label %27

27:                                               ; preds = %25, %23, %22, %8, %6, %4
  %28 = load i32, i32* %1, align 4
  ret i32 %28
}

declare dso_local i32 @backlight_set(i32) #1

declare dso_local i32 @update_time_config(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
